2012-06-11  Jocelyn Turcotte  <jocelyn.turcotte@nokia.com>

        Using extrernal ICU library on case unsensitive drives will not work
        https://bugs.webkit.org/show_bug.cgi?id=70913

        Reviewed by Csaba Osztrogonác.

        Properly set the include path for the WTF module and for modules using it.
        The path should include Source/WTF/wtf only when building WTF itself. Other
        modules are expected to include the headers as #include <wtf/Header.h>, so
        only add Source/WTF to their include path.

        "unicode/utf8.h" should now then always reference to ICU in the include path
        and "wtf/unicode/UTF8.h" reference to the WTF version.
        This will work as long as WTF object files don't depend on ICU themselves.

        Removed gobject, qt and unicode from the include path as those directories
        don't exist anymore.

        * WTF.pri:
        * WTF.pro:

2012-06-11  Carlos Garcia Campos  <cgarcia@igalia.com>

        Unreviewed. Fix make distcheck issues.

        * GNUmakefile.list.am: Add missing header file.

2012-06-09  Dominic Cooney  <dominicc@chromium.org>

        [Chromium] Remove JavaScriptCore dependencies from gyp
        https://bugs.webkit.org/show_bug.cgi?id=88510

        Reviewed by Adam Barth.

        Chromium doesn't support JSC any more and there doesn't seem to be
        a strong interest in using GYP as the common build system in other
        ports.

        * WTF.gyp/WTF.gyp:

2012-06-08  Andy Wingo  <wingo@igalia.com>

        Explictly mark stubs called by JIT as being internal
        https://bugs.webkit.org/show_bug.cgi?id=88552

        Reviewed by Filip Pizlo.

        * wtf/ExportMacros.h (WTF_INTERNAL, HAVE_INTERNAL_VISIBILITY): New
        defines.  Regardless of what the port does about visibility in
        general, for code referenced only from assembly it is useful to
        give it internal visibility.
        * wtf/InlineASM.h: Split SYMBOL_STRING_RELOCATION into